firmware/defmt-test/macros/tests/ui/before_each-has-ignore-macro.stderr
error: `#[ignore]` is not allowed on the `#[before_each]` function
 --> tests/ui/before_each-has-ignore-macro.rs:7:8
  |
7 |     fn init() {}
  |        ^^^^
